// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/cart/components/CartDesktopPromotion click image to view product detail when promotion bundle buy 2 pay 1 | it should be match snapshot 1`] = `
<DocumentFragment>
  <div
    class="CartDesktopPromotion__RowContainerItem-sc-1tma7-3 dLMZCW Row__Wrapper-v6uxgu-0 kSLyDU"
    color="#f7f7f7"
    height="60px"
  >
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 kHbetE Col__Column-sc-1619uro-0 drldVy"
    >
      <img
        class="CartDesktopPromotion__ImageProduct-sc-1tma7-0 jqfqJZ Image__Img-sc-1s8ofg8-0 bEmjdg"
        data-testid="img-viewCartDesktopPromotion-onViewProduct-11577330"
        src="https://uat-mdc.tops.co.th/media/catalog/product/8/8/8801073211216_x2.jpg?imwidth=50"
        width="40px"
      />
      <div
        class="Row__Wrapper-v6uxgu-0 kSLyDU"
      >
        <div
          class="Col__Column-sc-1619uro-0 bpIQSr"
        >
          <span
            class="Text-sc-9p67zt-0 CartDesktopPromotion__Text2LineEllipsis-sc-1tma7-2 bwUQTO"
            color="#666666"
            data-testid="btn-viewCartDesktopPromotion-onViewProduct-11577330"
            display=""
            id="txt-product-name"
            size="12"
            spacing="normal"
          >
            Samyang Extreme Hot Chicken Big Bowl 105g.
          </span>
        </div>
        <div
          class="Col__Column-sc-1619uro-0 bpIQSr"
        >
          <span
            class="Text-sc-9p67zt-0 CartDesktopPromotion__TextChangeBundle-sc-1tma7-1 blczQl"
            color="#666666"
            data-testid="btn-viewCartDesktopPromotion-openPromoBundleModal"
            display=""
            size="10"
            spacing="normal"
          >
            <img
              class="Icon-sc-134752z-0 fCCZuM"
              height="0"
              opacity="1"
              rotate="0"
              src="/assets/icons/ic-edit.svg"
              style="margin-right: 1px;"
              width="10"
            />
            <p
              class="Text-sc-9p67zt-0 default-font TextGuide__Caption-sc-1wuo3jj-0 khELOm"
              color="#666666"
              display=""
              size="11"
              spacing="normal"
              style="font-size: 10px;"
            >
              promotion.change_free_items
            </p>
          </span>
        </div>
      </div>
    </div>
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 yUtop Col__Column-sc-1619uro-0 djatvc"
    >
      <span
        class="Text-sc-9p67zt-0 hYkHxI"
        color="#666666"
        display=""
        size="12"
        spacing="normal"
      />
    </div>
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 iLtDlt Col__Column-sc-1619uro-0 bUWYUb"
    >
      <span
        class="Text-sc-9p67zt-0 hYkHxI"
        color="#666666"
        display=""
        size="12"
        spacing="normal"
      >
        1
      </span>
    </div>
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 kHbetE Col__Column-sc-1619uro-0 djatvc"
    >
      <span
        class="Text-sc-9p67zt-0 hYkHxI"
        color="#666666"
        display=""
        size="12"
        spacing="normal"
      >
        pcs
      </span>
    </div>
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 yUtop Col__Column-sc-1619uro-0 gIiNII"
    />
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 yUtop Col__Column-sc-1619uro-0 iZdHvi"
    >
      <span
        class="Text-sc-9p67zt-0 bjEjky"
        color="#666666"
        display=""
        size="12"
        spacing="normal"
      >
        promotion.free
      </span>
    </div>
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 iLtDlt Col__Column-sc-1619uro-0 cOPlex"
    >
      <img
        class="Icon-sc-134752z-0 CartDesktopPromotion__IconImage-sc-1tma7-5 jgMlek"
        data-testid="btn-removeCartDesktopPromotion-onDeleteItem"
        height="15"
        opacity="1"
        rotate="0"
        src="/assets/icons/round-delete-24-px.svg"
        width="11.7"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`features/cart/components/CartDesktopPromotion click title to view product detail when promotion bundle buy 2 pay 1 | it should be match snapshot 1`] = `
<DocumentFragment>
  <div
    class="CartDesktopPromotion__RowContainerItem-sc-1tma7-3 dLMZCW Row__Wrapper-v6uxgu-0 kSLyDU"
    color="#f7f7f7"
    height="60px"
  >
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 kHbetE Col__Column-sc-1619uro-0 drldVy"
    >
      <img
        class="CartDesktopPromotion__ImageProduct-sc-1tma7-0 jqfqJZ Image__Img-sc-1s8ofg8-0 bEmjdg"
        data-testid="img-viewCartDesktopPromotion-onViewProduct-11577330"
        src="https://uat-mdc.tops.co.th/media/catalog/product/8/8/8801073211216_x2.jpg?imwidth=50"
        width="40px"
      />
      <div
        class="Row__Wrapper-v6uxgu-0 kSLyDU"
      >
        <div
          class="Col__Column-sc-1619uro-0 bpIQSr"
        >
          <span
            class="Text-sc-9p67zt-0 CartDesktopPromotion__Text2LineEllipsis-sc-1tma7-2 bwUQTO"
            color="#666666"
            data-testid="btn-viewCartDesktopPromotion-onViewProduct-11577330"
            display=""
            id="txt-product-name"
            size="12"
            spacing="normal"
          >
            Samyang Extreme Hot Chicken Big Bowl 105g.
          </span>
        </div>
        <div
          class="Col__Column-sc-1619uro-0 bpIQSr"
        >
          <span
            class="Text-sc-9p67zt-0 CartDesktopPromotion__TextChangeBundle-sc-1tma7-1 blczQl"
            color="#666666"
            data-testid="btn-viewCartDesktopPromotion-openPromoBundleModal"
            display=""
            size="10"
            spacing="normal"
          >
            <img
              class="Icon-sc-134752z-0 fCCZuM"
              height="0"
              opacity="1"
              rotate="0"
              src="/assets/icons/ic-edit.svg"
              style="margin-right: 1px;"
              width="10"
            />
            <p
              class="Text-sc-9p67zt-0 default-font TextGuide__Caption-sc-1wuo3jj-0 khELOm"
              color="#666666"
              display=""
              size="11"
              spacing="normal"
              style="font-size: 10px;"
            >
              promotion.change_free_items
            </p>
          </span>
        </div>
      </div>
    </div>
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 yUtop Col__Column-sc-1619uro-0 djatvc"
    >
      <span
        class="Text-sc-9p67zt-0 hYkHxI"
        color="#666666"
        display=""
        size="12"
        spacing="normal"
      />
    </div>
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 iLtDlt Col__Column-sc-1619uro-0 bUWYUb"
    >
      <span
        class="Text-sc-9p67zt-0 hYkHxI"
        color="#666666"
        display=""
        size="12"
        spacing="normal"
      >
        1
      </span>
    </div>
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 kHbetE Col__Column-sc-1619uro-0 djatvc"
    >
      <span
        class="Text-sc-9p67zt-0 hYkHxI"
        color="#666666"
        display=""
        size="12"
        spacing="normal"
      >
        pcs
      </span>
    </div>
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 yUtop Col__Column-sc-1619uro-0 gIiNII"
    />
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 yUtop Col__Column-sc-1619uro-0 iZdHvi"
    >
      <span
        class="Text-sc-9p67zt-0 bjEjky"
        color="#666666"
        display=""
        size="12"
        spacing="normal"
      >
        promotion.free
      </span>
    </div>
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 iLtDlt Col__Column-sc-1619uro-0 cOPlex"
    >
      <img
        class="Icon-sc-134752z-0 CartDesktopPromotion__IconImage-sc-1tma7-5 jgMlek"
        data-testid="btn-removeCartDesktopPromotion-onDeleteItem"
        height="15"
        opacity="1"
        rotate="0"
        src="/assets/icons/round-delete-24-px.svg"
        width="11.7"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`features/cart/components/CartDesktopPromotion delete item bundle central_eachn_percent_discount | it should be match snapshot 1`] = `
<DocumentFragment>
  <div
    class="CartDesktopPromotion__RowContainerItem-sc-1tma7-3 dLMZCW Row__Wrapper-v6uxgu-0 kSLyDU"
    color="#f7f7f7"
    height="60px"
  >
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 kHbetE Col__Column-sc-1619uro-0 drldVy"
    >
      <img
        class="CartDesktopPromotion__ImageProduct-sc-1tma7-0 jqfqJZ Image__Img-sc-1s8ofg8-0 bEmjdg"
        data-testid="img-viewCartDesktopPromotion-onViewProduct-11577330"
        src="https://uat-mdc.tops.co.th/media/catalog/product/8/8/8801073211216_x2.jpg?imwidth=50"
        width="40px"
      />
      <div
        class="Row__Wrapper-v6uxgu-0 kSLyDU"
      >
        <div
          class="Col__Column-sc-1619uro-0 bpIQSr"
        >
          <span
            class="Text-sc-9p67zt-0 CartDesktopPromotion__Text2LineEllipsis-sc-1tma7-2 bwUQTO"
            color="#666666"
            data-testid="btn-viewCartDesktopPromotion-onViewProduct-11577330"
            display=""
            id="txt-product-name"
            size="12"
            spacing="normal"
          >
            Samyang Extreme Hot Chicken Big Bowl 105g.
          </span>
        </div>
        <div
          class="Col__Column-sc-1619uro-0 bpIQSr"
        >
          <span
            class="Text-sc-9p67zt-0 CartDesktopPromotion__TextChangeBundle-sc-1tma7-1 blczQl"
            color="#666666"
            data-testid="btn-viewCartDesktopPromotion-openPromoBundleModal"
            display=""
            size="10"
            spacing="normal"
          >
            <img
              class="Icon-sc-134752z-0 fCCZuM"
              height="0"
              opacity="1"
              rotate="0"
              src="/assets/icons/ic-edit.svg"
              style="margin-right: 1px;"
              width="10"
            />
            <p
              class="Text-sc-9p67zt-0 default-font TextGuide__Caption-sc-1wuo3jj-0 khELOm"
              color="#666666"
              display=""
              size="11"
              spacing="normal"
              style="font-size: 10px;"
            >
              promotion.change_free_items
            </p>
          </span>
        </div>
      </div>
    </div>
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 yUtop Col__Column-sc-1619uro-0 djatvc"
    >
      <span
        class="Text-sc-9p67zt-0 hYkHxI"
        color="#666666"
        display=""
        size="12"
        spacing="normal"
      />
    </div>
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 iLtDlt Col__Column-sc-1619uro-0 bUWYUb"
    >
      <span
        class="Text-sc-9p67zt-0 hYkHxI"
        color="#666666"
        display=""
        size="12"
        spacing="normal"
      >
        1
      </span>
    </div>
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 kHbetE Col__Column-sc-1619uro-0 djatvc"
    >
      <span
        class="Text-sc-9p67zt-0 hYkHxI"
        color="#666666"
        display=""
        size="12"
        spacing="normal"
      >
        pcs
      </span>
    </div>
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 yUtop Col__Column-sc-1619uro-0 gIiNII"
    />
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 yUtop Col__Column-sc-1619uro-0 iZdHvi"
    >
      <span
        class="Text-sc-9p67zt-0 bjEjky"
        color="#666666"
        display=""
        size="12"
        spacing="normal"
      >
        promotion.free
      </span>
    </div>
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 iLtDlt Col__Column-sc-1619uro-0 cOPlex"
    >
      <img
        class="Icon-sc-134752z-0 CartDesktopPromotion__IconImage-sc-1tma7-5 jgMlek"
        data-testid="btn-removeCartDesktopPromotion-onDeleteItem"
        height="15"
        opacity="1"
        rotate="0"
        src="/assets/icons/round-delete-24-px.svg"
        width="11.7"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`features/cart/components/CartDesktopPromotion delete item bundle groupn_fixdisc | it should be match snapshot 1`] = `
<DocumentFragment>
  <div
    class="CartDesktopPromotion__RowContainerItem-sc-1tma7-3 djifYf Row__Wrapper-v6uxgu-0 kSLyDU"
    color="#f7f7f7"
  >
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 kHbetE Col__Column-sc-1619uro-0 drldVy"
    >
      <div
        class="Row__Wrapper-v6uxgu-0 kSLyDU"
      >
        <div
          class="CartDesktopPromotion__ColPromotion-sc-1tma7-6 dBVfNp Col__Column-sc-1619uro-0 bpIQSr"
        >
          <p
            class="Text-sc-9p67zt-0 default-font TextGuide__Caption-sc-1wuo3jj-0 knxMnr"
            color="#666666"
            display=""
            size="11"
            spacing="normal"
          >
            promotion.promotion_online
          </p>
        </div>
      </div>
    </div>
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 yUtop Col__Column-sc-1619uro-0 djatvc"
    />
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 iLtDlt Col__Column-sc-1619uro-0 bUWYUb"
    />
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 kHbetE Col__Column-sc-1619uro-0 djatvc"
    />
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 yUtop Col__Column-sc-1619uro-0 gIiNII"
    >
      <p
        class="Text-sc-9p67zt-0 default-font TextGuide__Caption-sc-1wuo3jj-0 cwWbaV"
        color="#ec1d24"
        display=""
        size="11"
        spacing="normal"
      >
        -20.00฿
      </p>
    </div>
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 yUtop Col__Column-sc-1619uro-0 iZdHvi"
    />
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 iLtDlt Col__Column-sc-1619uro-0 cOPlex"
    >
      <img
        class="Icon-sc-134752z-0 CartDesktopPromotion__IconImage-sc-1tma7-5 jgMlek"
        data-testid="btn-removeCartDesktopPromotion-onDeleteItem"
        height="15"
        opacity="1"
        rotate="0"
        src="/assets/icons/round-delete-24-px.svg"
        width="11.7"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`features/cart/components/CartDesktopPromotion it action type cart_fixed with should match snapshot 1`] = `
<DocumentFragment>
  <div
    class="CartDesktopPromotion__RowContainerItem-sc-1tma7-3 djifYf Row__Wrapper-v6uxgu-0 kSLyDU"
    color="#f7f7f7"
  >
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 kHbetE Col__Column-sc-1619uro-0 drldVy"
    >
      <div
        class="Row__Wrapper-v6uxgu-0 kSLyDU"
      >
        <div
          class="CartDesktopPromotion__ColPromotion-sc-1tma7-6 dBVfNp Col__Column-sc-1619uro-0 bpIQSr"
        >
          <p
            class="Text-sc-9p67zt-0 default-font TextGuide__Caption-sc-1wuo3jj-0 knxMnr"
            color="#666666"
            display=""
            size="11"
            spacing="normal"
          >
            promotion.promotion_online
          </p>
        </div>
      </div>
    </div>
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 yUtop Col__Column-sc-1619uro-0 djatvc"
    />
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 iLtDlt Col__Column-sc-1619uro-0 bUWYUb"
    />
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 kHbetE Col__Column-sc-1619uro-0 djatvc"
    />
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 yUtop Col__Column-sc-1619uro-0 gIiNII"
    >
      <p
        class="Text-sc-9p67zt-0 default-font TextGuide__Caption-sc-1wuo3jj-0 cwWbaV"
        color="#ec1d24"
        display=""
        size="11"
        spacing="normal"
      >
        -100.00฿
      </p>
    </div>
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 yUtop Col__Column-sc-1619uro-0 iZdHvi"
    />
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 iLtDlt Col__Column-sc-1619uro-0 cOPlex"
    >
      <img
        class="Icon-sc-134752z-0 CartDesktopPromotion__IconImage-sc-1tma7-5 jgMlek"
        data-testid="btn-removeCartDesktopPromotion-onDeleteItem"
        height="15"
        opacity="1"
        rotate="0"
        src="/assets/icons/round-delete-24-px.svg"
        width="11.7"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`features/cart/components/CartDesktopPromotion it action type central_eachn_percent_discount should match when promotion data empty 1`] = `
<DocumentFragment>
  <div
    class="CartDesktopPromotion__RowContainerItem-sc-1tma7-3 dLMZCW Row__Wrapper-v6uxgu-0 kSLyDU"
    color="#f7f7f7"
    height="60px"
  >
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 kHbetE Col__Column-sc-1619uro-0 drldVy"
    >
      <img
        class="CartDesktopPromotion__ImageProduct-sc-1tma7-0 jqfqJZ Image__Img-sc-1s8ofg8-0 bEmjdg"
        data-testid="img-viewCartDesktopPromotion-onViewProduct-"
        src="catalog/product?imwidth=50"
        width="40px"
      />
      <div
        class="Row__Wrapper-v6uxgu-0 kSLyDU"
      >
        <div
          class="Col__Column-sc-1619uro-0 bpIQSr"
        >
          <span
            class="Text-sc-9p67zt-0 CartDesktopPromotion__Text2LineEllipsis-sc-1tma7-2 bwUQTO"
            color="#666666"
            data-testid="btn-viewCartDesktopPromotion-onViewProduct-"
            display=""
            id="txt-product-name"
            size="12"
            spacing="normal"
          />
        </div>
        <div
          class="Col__Column-sc-1619uro-0 bpIQSr"
        >
          <span
            class="Text-sc-9p67zt-0 CartDesktopPromotion__TextChangeBundle-sc-1tma7-1 blczQl"
            color="#666666"
            data-testid="btn-viewCartDesktopPromotion-openPromoBundleModal"
            display=""
            size="10"
            spacing="normal"
          >
            <img
              class="Icon-sc-134752z-0 fCCZuM"
              height="0"
              opacity="1"
              rotate="0"
              src="/assets/icons/ic-edit.svg"
              style="margin-right: 1px;"
              width="10"
            />
            <p
              class="Text-sc-9p67zt-0 default-font TextGuide__Caption-sc-1wuo3jj-0 khELOm"
              color="#666666"
              display=""
              size="11"
              spacing="normal"
              style="font-size: 10px;"
            >
              promotion.change_free_items
            </p>
          </span>
        </div>
      </div>
    </div>
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 yUtop Col__Column-sc-1619uro-0 djatvc"
    >
      <span
        class="Text-sc-9p67zt-0 hYkHxI"
        color="#666666"
        display=""
        size="12"
        spacing="normal"
      />
    </div>
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 iLtDlt Col__Column-sc-1619uro-0 bUWYUb"
    >
      <span
        class="Text-sc-9p67zt-0 hYkHxI"
        color="#666666"
        display=""
        size="12"
        spacing="normal"
      />
    </div>
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 kHbetE Col__Column-sc-1619uro-0 djatvc"
    >
      <span
        class="Text-sc-9p67zt-0 hYkHxI"
        color="#666666"
        display=""
        size="12"
        spacing="normal"
      />
    </div>
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 yUtop Col__Column-sc-1619uro-0 gIiNII"
    />
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 yUtop Col__Column-sc-1619uro-0 iZdHvi"
    >
      <span
        class="Text-sc-9p67zt-0 bjEjky"
        color="#666666"
        display=""
        size="12"
        spacing="normal"
      >
        promotion.free
      </span>
    </div>
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 iLtDlt Col__Column-sc-1619uro-0 cOPlex"
    >
      <img
        class="Icon-sc-134752z-0 CartDesktopPromotion__IconImage-sc-1tma7-5 jgMlek"
        data-testid="btn-removeCartDesktopPromotion-onDeleteItem"
        height="15"
        opacity="1"
        rotate="0"
        src="/assets/icons/round-delete-24-px.svg"
        width="11.7"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`features/cart/components/CartDesktopPromotion it action type central_eachn_percent_discount should match with snapshot 1`] = `
<DocumentFragment>
  <div
    class="CartDesktopPromotion__RowContainerItem-sc-1tma7-3 dLMZCW Row__Wrapper-v6uxgu-0 kSLyDU"
    color="#f7f7f7"
    height="60px"
  >
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 kHbetE Col__Column-sc-1619uro-0 drldVy"
    >
      <img
        class="CartDesktopPromotion__ImageProduct-sc-1tma7-0 jqfqJZ Image__Img-sc-1s8ofg8-0 bEmjdg"
        data-testid="img-viewCartDesktopPromotion-onViewProduct-11577330"
        src="https://uat-mdc.tops.co.th/media/catalog/product/8/8/8801073211216_x2.jpg?imwidth=50"
        width="40px"
      />
      <div
        class="Row__Wrapper-v6uxgu-0 kSLyDU"
      >
        <div
          class="Col__Column-sc-1619uro-0 bpIQSr"
        >
          <span
            class="Text-sc-9p67zt-0 CartDesktopPromotion__Text2LineEllipsis-sc-1tma7-2 bwUQTO"
            color="#666666"
            data-testid="btn-viewCartDesktopPromotion-onViewProduct-11577330"
            display=""
            id="txt-product-name"
            size="12"
            spacing="normal"
          >
            Samyang Extreme Hot Chicken Big Bowl 105g.
          </span>
        </div>
        <div
          class="Col__Column-sc-1619uro-0 bpIQSr"
        >
          <span
            class="Text-sc-9p67zt-0 CartDesktopPromotion__TextChangeBundle-sc-1tma7-1 blczQl"
            color="#666666"
            data-testid="btn-viewCartDesktopPromotion-openPromoBundleModal"
            display=""
            size="10"
            spacing="normal"
          >
            <img
              class="Icon-sc-134752z-0 fCCZuM"
              height="0"
              opacity="1"
              rotate="0"
              src="/assets/icons/ic-edit.svg"
              style="margin-right: 1px;"
              width="10"
            />
            <p
              class="Text-sc-9p67zt-0 default-font TextGuide__Caption-sc-1wuo3jj-0 khELOm"
              color="#666666"
              display=""
              size="11"
              spacing="normal"
              style="font-size: 10px;"
            >
              promotion.change_free_items
            </p>
          </span>
        </div>
      </div>
    </div>
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 yUtop Col__Column-sc-1619uro-0 djatvc"
    >
      <span
        class="Text-sc-9p67zt-0 hYkHxI"
        color="#666666"
        display=""
        size="12"
        spacing="normal"
      />
    </div>
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 iLtDlt Col__Column-sc-1619uro-0 bUWYUb"
    >
      <span
        class="Text-sc-9p67zt-0 hYkHxI"
        color="#666666"
        display=""
        size="12"
        spacing="normal"
      >
        1
      </span>
    </div>
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 kHbetE Col__Column-sc-1619uro-0 djatvc"
    >
      <span
        class="Text-sc-9p67zt-0 hYkHxI"
        color="#666666"
        display=""
        size="12"
        spacing="normal"
      >
        pcs
      </span>
    </div>
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 yUtop Col__Column-sc-1619uro-0 gIiNII"
    />
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 yUtop Col__Column-sc-1619uro-0 iZdHvi"
    >
      <span
        class="Text-sc-9p67zt-0 bjEjky"
        color="#666666"
        display=""
        size="12"
        spacing="normal"
      >
        promotion.free
      </span>
    </div>
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 iLtDlt Col__Column-sc-1619uro-0 cOPlex"
    >
      <img
        class="Icon-sc-134752z-0 CartDesktopPromotion__IconImage-sc-1tma7-5 jgMlek"
        data-testid="btn-removeCartDesktopPromotion-onDeleteItem"
        height="15"
        opacity="1"
        rotate="0"
        src="/assets/icons/round-delete-24-px.svg"
        width="11.7"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`features/cart/components/CartDesktopPromotion it action type groupn should match with snapshot 1`] = `
<DocumentFragment>
  <div
    class="CartDesktopPromotion__RowContainerItem-sc-1tma7-3 djifYf Row__Wrapper-v6uxgu-0 kSLyDU"
    color="#f7f7f7"
  >
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 kHbetE Col__Column-sc-1619uro-0 drldVy"
    >
      <div
        class="Row__Wrapper-v6uxgu-0 kSLyDU"
      >
        <div
          class="CartDesktopPromotion__ColPromotion-sc-1tma7-6 dBVfNp Col__Column-sc-1619uro-0 bpIQSr"
        >
          <p
            class="Text-sc-9p67zt-0 default-font TextGuide__Caption-sc-1wuo3jj-0 knxMnr"
            color="#666666"
            display=""
            size="11"
            spacing="normal"
          >
            promotion.promotion_discount
          </p>
        </div>
      </div>
    </div>
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 yUtop Col__Column-sc-1619uro-0 djatvc"
    />
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 iLtDlt Col__Column-sc-1619uro-0 bUWYUb"
    />
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 kHbetE Col__Column-sc-1619uro-0 djatvc"
    />
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 yUtop Col__Column-sc-1619uro-0 gIiNII"
    >
      <p
        class="Text-sc-9p67zt-0 default-font TextGuide__Caption-sc-1wuo3jj-0 cwWbaV"
        color="#ec1d24"
        display=""
        size="11"
        spacing="normal"
      >
        -10.00฿
      </p>
    </div>
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 yUtop Col__Column-sc-1619uro-0 iZdHvi"
    />
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 iLtDlt Col__Column-sc-1619uro-0 cOPlex"
    >
      <img
        class="Icon-sc-134752z-0 CartDesktopPromotion__IconImage-sc-1tma7-5 jgMlek"
        data-testid="btn-removeCartDesktopPromotion-onDeleteItem"
        height="15"
        opacity="1"
        rotate="0"
        src="/assets/icons/round-delete-24-px.svg"
        width="11.7"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`features/cart/components/CartDesktopPromotion it action type groupn_fixdisc should match when promotion data empty 1`] = `
<DocumentFragment>
  <div
    class="CartDesktopPromotion__RowContainerItem-sc-1tma7-3 djifYf Row__Wrapper-v6uxgu-0 kSLyDU"
    color="#f7f7f7"
  >
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 kHbetE Col__Column-sc-1619uro-0 drldVy"
    >
      <div
        class="Row__Wrapper-v6uxgu-0 kSLyDU"
      >
        <div
          class="CartDesktopPromotion__ColPromotion-sc-1tma7-6 dBVfNp Col__Column-sc-1619uro-0 bpIQSr"
        >
          <p
            class="Text-sc-9p67zt-0 default-font TextGuide__Caption-sc-1wuo3jj-0 knxMnr"
            color="#666666"
            display=""
            size="11"
            spacing="normal"
          >
            promotion.promotion_online
          </p>
        </div>
      </div>
    </div>
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 yUtop Col__Column-sc-1619uro-0 djatvc"
    />
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 iLtDlt Col__Column-sc-1619uro-0 bUWYUb"
    />
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 kHbetE Col__Column-sc-1619uro-0 djatvc"
    />
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 yUtop Col__Column-sc-1619uro-0 gIiNII"
    >
      <p
        class="Text-sc-9p67zt-0 default-font TextGuide__Caption-sc-1wuo3jj-0 cwWbaV"
        color="#ec1d24"
        display=""
        size="11"
        spacing="normal"
      >
        -
      </p>
    </div>
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 yUtop Col__Column-sc-1619uro-0 iZdHvi"
    />
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 iLtDlt Col__Column-sc-1619uro-0 cOPlex"
    >
      <img
        class="Icon-sc-134752z-0 CartDesktopPromotion__IconImage-sc-1tma7-5 jgMlek"
        data-testid="btn-removeCartDesktopPromotion-onDeleteItem"
        height="15"
        opacity="1"
        rotate="0"
        src="/assets/icons/round-delete-24-px.svg"
        width="11.7"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`features/cart/components/CartDesktopPromotion it action type groupn_fixdisc should match when promotion data empty 2`] = `
<DocumentFragment>
  <div
    class="CartDesktopPromotion__RowContainerItem-sc-1tma7-3 djifYf Row__Wrapper-v6uxgu-0 kSLyDU"
    color="#f7f7f7"
  >
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 kHbetE Col__Column-sc-1619uro-0 drldVy"
    >
      <div
        class="Row__Wrapper-v6uxgu-0 kSLyDU"
      >
        <div
          class="CartDesktopPromotion__ColPromotion-sc-1tma7-6 dBVfNp Col__Column-sc-1619uro-0 bpIQSr"
        >
          <p
            class="Text-sc-9p67zt-0 default-font TextGuide__Caption-sc-1wuo3jj-0 knxMnr"
            color="#666666"
            display=""
            size="11"
            spacing="normal"
          >
            promotion.promotion_online
          </p>
        </div>
      </div>
    </div>
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 yUtop Col__Column-sc-1619uro-0 djatvc"
    />
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 iLtDlt Col__Column-sc-1619uro-0 bUWYUb"
    />
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 kHbetE Col__Column-sc-1619uro-0 djatvc"
    />
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 yUtop Col__Column-sc-1619uro-0 gIiNII"
    >
      <p
        class="Text-sc-9p67zt-0 default-font TextGuide__Caption-sc-1wuo3jj-0 cwWbaV"
        color="#ec1d24"
        display=""
        size="11"
        spacing="normal"
      >
        -
      </p>
    </div>
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 yUtop Col__Column-sc-1619uro-0 iZdHvi"
    />
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 iLtDlt Col__Column-sc-1619uro-0 cOPlex"
    >
      <img
        class="Icon-sc-134752z-0 CartDesktopPromotion__IconImage-sc-1tma7-5 jgMlek"
        data-testid="btn-removeCartDesktopPromotion-onDeleteItem"
        height="15"
        opacity="1"
        rotate="0"
        src="/assets/icons/round-delete-24-px.svg"
        width="11.7"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`features/cart/components/CartDesktopPromotion it action type groupn_fixdisc should match with snapshot 1`] = `
<DocumentFragment>
  <div
    class="CartDesktopPromotion__RowContainerItem-sc-1tma7-3 djifYf Row__Wrapper-v6uxgu-0 kSLyDU"
    color="#f7f7f7"
  >
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 kHbetE Col__Column-sc-1619uro-0 drldVy"
    >
      <div
        class="Row__Wrapper-v6uxgu-0 kSLyDU"
      >
        <div
          class="CartDesktopPromotion__ColPromotion-sc-1tma7-6 dBVfNp Col__Column-sc-1619uro-0 bpIQSr"
        >
          <p
            class="Text-sc-9p67zt-0 default-font TextGuide__Caption-sc-1wuo3jj-0 knxMnr"
            color="#666666"
            display=""
            size="11"
            spacing="normal"
          >
            promotion.promotion_online
          </p>
        </div>
      </div>
    </div>
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 yUtop Col__Column-sc-1619uro-0 djatvc"
    />
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 iLtDlt Col__Column-sc-1619uro-0 bUWYUb"
    />
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 kHbetE Col__Column-sc-1619uro-0 djatvc"
    />
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 yUtop Col__Column-sc-1619uro-0 gIiNII"
    >
      <p
        class="Text-sc-9p67zt-0 default-font TextGuide__Caption-sc-1wuo3jj-0 cwWbaV"
        color="#ec1d24"
        display=""
        size="11"
        spacing="normal"
      >
        -20.00฿
      </p>
    </div>
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 yUtop Col__Column-sc-1619uro-0 iZdHvi"
    />
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 iLtDlt Col__Column-sc-1619uro-0 cOPlex"
    >
      <img
        class="Icon-sc-134752z-0 CartDesktopPromotion__IconImage-sc-1tma7-5 jgMlek"
        data-testid="btn-removeCartDesktopPromotion-onDeleteItem"
        height="15"
        opacity="1"
        rotate="0"
        src="/assets/icons/round-delete-24-px.svg"
        width="11.7"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`features/cart/components/CartDesktopPromotion open modal item promotion bundle central_eachn_percent_discount | it should be match snapshot 1`] = `
<DocumentFragment>
  <div
    class="CartDesktopPromotion__RowContainerItem-sc-1tma7-3 dLMZCW Row__Wrapper-v6uxgu-0 kSLyDU"
    color="#f7f7f7"
    height="60px"
  >
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 kHbetE Col__Column-sc-1619uro-0 drldVy"
    >
      <img
        class="CartDesktopPromotion__ImageProduct-sc-1tma7-0 jqfqJZ Image__Img-sc-1s8ofg8-0 bEmjdg"
        data-testid="img-viewCartDesktopPromotion-onViewProduct-11577330"
        src="https://uat-mdc.tops.co.th/media/catalog/product/8/8/8801073211216_x2.jpg?imwidth=50"
        width="40px"
      />
      <div
        class="Row__Wrapper-v6uxgu-0 kSLyDU"
      >
        <div
          class="Col__Column-sc-1619uro-0 bpIQSr"
        >
          <span
            class="Text-sc-9p67zt-0 CartDesktopPromotion__Text2LineEllipsis-sc-1tma7-2 bwUQTO"
            color="#666666"
            data-testid="btn-viewCartDesktopPromotion-onViewProduct-11577330"
            display=""
            id="txt-product-name"
            size="12"
            spacing="normal"
          >
            Samyang Extreme Hot Chicken Big Bowl 105g.
          </span>
        </div>
        <div
          class="Col__Column-sc-1619uro-0 bpIQSr"
        >
          <span
            class="Text-sc-9p67zt-0 CartDesktopPromotion__TextChangeBundle-sc-1tma7-1 blczQl"
            color="#666666"
            data-testid="btn-viewCartDesktopPromotion-openPromoBundleModal"
            display=""
            size="10"
            spacing="normal"
          >
            <img
              class="Icon-sc-134752z-0 fCCZuM"
              height="0"
              opacity="1"
              rotate="0"
              src="/assets/icons/ic-edit.svg"
              style="margin-right: 1px;"
              width="10"
            />
            <p
              class="Text-sc-9p67zt-0 default-font TextGuide__Caption-sc-1wuo3jj-0 khELOm"
              color="#666666"
              display=""
              size="11"
              spacing="normal"
              style="font-size: 10px;"
            >
              promotion.change_free_items
            </p>
          </span>
        </div>
      </div>
    </div>
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 yUtop Col__Column-sc-1619uro-0 djatvc"
    >
      <span
        class="Text-sc-9p67zt-0 hYkHxI"
        color="#666666"
        display=""
        size="12"
        spacing="normal"
      />
    </div>
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 iLtDlt Col__Column-sc-1619uro-0 bUWYUb"
    >
      <span
        class="Text-sc-9p67zt-0 hYkHxI"
        color="#666666"
        display=""
        size="12"
        spacing="normal"
      >
        1
      </span>
    </div>
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 kHbetE Col__Column-sc-1619uro-0 djatvc"
    >
      <span
        class="Text-sc-9p67zt-0 hYkHxI"
        color="#666666"
        display=""
        size="12"
        spacing="normal"
      >
        pcs
      </span>
    </div>
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 yUtop Col__Column-sc-1619uro-0 gIiNII"
    />
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 yUtop Col__Column-sc-1619uro-0 iZdHvi"
    >
      <span
        class="Text-sc-9p67zt-0 bjEjky"
        color="#666666"
        display=""
        size="12"
        spacing="normal"
      >
        promotion.free
      </span>
    </div>
    <div
      class="CartDesktopPromotion__ColumnItem-sc-1tma7-4 iLtDlt Col__Column-sc-1619uro-0 cOPlex"
    >
      <img
        class="Icon-sc-134752z-0 CartDesktopPromotion__IconImage-sc-1tma7-5 jgMlek"
        data-testid="btn-removeCartDesktopPromotion-onDeleteItem"
        height="15"
        opacity="1"
        rotate="0"
        src="/assets/icons/round-delete-24-px.svg"
        width="11.7"
      />
    </div>
  </div>
</DocumentFragment>
`;
